--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,42 +1,43 @@
-
-  * {
+* {
     margin: 0;
     padding: 0;
-  }
-  *,
-  *:before,
-  *:after {
+}
+*,
+*:before,
+*:after {
     box-sizing: border-box;
-  }
-  html {
+}
+html {
     font-size: 62.5%;
-  }
-  body {
+}
+body {
     min-height: 120vh;
     font-size: 1.6rem;
     font-family: $font-family;
-  }
-  input,
-  textarea,
-  select,
-  button {
+    font-weight: 500;
+}
+input,
+textarea,
+select,
+button {
+    font-family: inherit;
     border: none;
     outline: none;
-  }
-  input {
+}
+input {
     line-height: normal;
-  }
-  label,
-  button {
+}
+label,
+button {
     cursor: pointer;
-  }
-  a {
+}
+a {
     text-decoration: none;
-  }
-  img {
+}
+img {
     display: block;
     max-width: 100%;
-  }
-  ul {
+}
+ul {
     list-style: none;
-  }
+}
