--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -1,10 +1,20 @@
 @font-face {
     font-family: SVNGilroy;
-    src: url('/assets/fonts/SVNGilroyBold.otf');
+    src: url('./../shared/assets/fonts/Gilroy-Medium-500.ttf');
+    font-weight: 500;
+}
+@font-face {
+    font-family: SVNGilroy;
+    src: url('./../shared/assets/fonts/Gilroy-SemiBold-600.ttf');
+    font-weight: 600;
+}
+@font-face {
+    font-family: SVNGilroy;
+    src: url('./../shared/assets/fonts/Gilroy-Bold-700.ttf');
     font-weight: 700;
 }
 @font-face {
     font-family: SVNGilroy;
-    src: url('/assets/fonts/SVNGilroyLight.otf');
-    font-weight: 600;
+    src: url('./../shared/assets/fonts/Gilroy-ExtraBold-800.ttf');
+    font-weight: 800;
 }
