--- a/src/features/pet-seller/pet-seller.module.scss
+++ b/src/features/pet-seller/pet-seller.module.scss
@@ -1,5 +1,5 @@
 .container {
-    padding: 40px 130px;
+    // padding: 40px 130px;
 }
 .heading {
     display: flex;
@@ -24,10 +24,16 @@
     display: flex;
     align-items: center;
     gap: 20px;
-    justify-content: space-between;
+    justify-content: center;
+    flex-wrap: wrap;
+
     margin-bottom: 40px;
     img {
         object-fit: contain;
+        width: 100%;
+    }
+    .brand-logo-wrapper {
+        max-width: 151px;
         width: 100%;
     }
 }
@@ -40,7 +46,7 @@
     overflow: hidden;
     display: flex;
     justify-content: space-between;
-    // align-items: center;
+    align-items: center;
     background-image: url(./../../shared/assets/images/banner-pet-seller.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -48,7 +54,6 @@
         max-width: 448px;
         width: 100%;
         margin-left: 80px;
-        margin-top: 60px;
     }
     .title {
         font-weight: 800;
@@ -99,3 +104,9 @@
 //     top: -226px;
 //     left: -208px;
 // }
+
+@media screen and (max-width: 767px) {
+    .container {
+        display: none;
+    }
+}
