--- a/src/shared/components/footer/footer.module.scss
+++ b/src/shared/components/footer/footer.module.scss
@@ -56,6 +56,9 @@
         align-items: center;
         gap: 40px;
     }
+    &-item {
+        color: $neutrol-100-color;
+    }
 }
 .container-bottom {
     display: flex;
