--- a/src/shared/components/banner/banner.module.scss
+++ b/src/shared/components/banner/banner.module.scss
@@ -1,24 +1,6 @@
-// .container {
-//     overflow: hidden;
-//     max-height: 595px;
-// }
-// .banner__content {
-//     display: flex;
-//     justify-content: space-between;
-// }
-// .banner__left {
-//     max-width: 480px;
-//     width: 100%;
-//     margin-top: 80px;
-// }
-// .banner__right {
-//     transform: scale(1.3485);
-//     flex: 1;
-//     .human {
-//         object-fit: contain;
-//     }
-// }
 .container {
+    position: relative;
+    min-height: 595px;
     overflow: hidden;
 }
 .banner__content {
@@ -29,52 +11,138 @@
     max-width: 480px;
     width: 100%;
     margin-top: 80px;
+    .action {
+        display: flex;
+        gap: 20px;
+    }
+    .title {
+        font-size: 60px;
+        font-weight: 800;
+        line-height: 68px;
+    }
+    .sub-title {
+        font-size: 46px;
+        font-weight: 700;
+        line-height: 60px;
+        margin-bottom: 24px;
+    }
+    .body {
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 24px;
+        margin-bottom: 34px;
+    }
 }
 .banner__right {
-    transform: scale(1.3485) translateY(100px);
     flex: 1;
-    .human {
-        max-height: 595px;
-        object-fit: contain;
-    }
+}
+.banner-image {
+    position: absolute;
+    right: -34px;
+    bottom: -82px;
+    z-index: 2;
+    object-fit: contain;
 }
 
-.action {
-    display: flex;
-    gap: 20px;
+.banner-block-primary,
+.banner-block-secondary {
+    position: absolute;
+    width: 635px;
+    height: 635px;
+    border-radius: 99px;
 }
-.title {
-    font-size: 60px;
-    font-weight: 800;
-    line-height: 68px;
+.banner-block-primary {
+    background-color: $primary-main-color;
+    top: 231px;
+    right: 161px;
+    transform: rotate(9.35deg);
 }
-.sub-title {
-    font-size: 46px;
-    font-weight: 700;
-    line-height: 60px;
-    margin-bottom: 24px;
-}
-.body {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    margin-bottom: 34px;
+.banner-block-secondary {
+    background-color: $secondary-main-color;
+    top: 201px;
+    right: 104px;
+    transform: rotate(25.23deg);
 }
 
-@media screen and (max-width: 1023px) {
+// .container-block-top,
+// .container-block-bottom {
+//     width: 635px;
+//     height: 635px;
+//     border-radius: 99px;
+//     position: absolute;
+// }
+// .container-block-top {
+//     top: -635px;
+//     left: -230px;
+//     background-color: $secondary-main-color;
+//     transform: rotate(25.23deg);
+// }
+
+@media screen and (max-width: 1279px) {
     .banner__left {
-        max-width: unset;
+        max-width: 390px;
+        .title {
+            font-size: 46px;
+        }
+        .sub-title {
+            font-size: 28px;
+        }
+        .body {
+            font-size: 12px;
+        }
     }
+    .banner-image {
+        right: -234px;
+    }
+    .banner-block-primary {
+        right: -20px;
+    }
+    .banner-block-secondary {
+        right: -96px;
+    }
+}
+@media screen and (max-width: 1023px) {
     .banner__content {
-        display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: unset;
+        gap: 25px;
+    }
+    .banner__left {
+        max-width: unset;
+        margin-top: 35px;
+        .sub-title {
+            margin-bottom: 12px;
+        }
+        .body {
+            max-width: 480px;
+        }
     }
     .banner__right {
-        .human {
+        position: relative;
+        .banner-image {
+            position: relative;
+            z-index: 9;
+            top: 0;
+            left: 0;
             max-height: 386px;
+            max-width: 414px;
+            object-fit: cover;
         }
-        transform: scale(1.3485) translateY(70px);
+    }
+    .banner-block-primary,
+    .banner-block-secondary {
+        width: 528px;
+        height: 528px;
+        border-radius: 48px;
+    }
+    .banner-block-primary {
+        top: 112px;
+        right: -155px;
+        transform: rotate(5.37deg);
+    }
+    .banner-block-secondary {
+        top: 88px;
+        right: -202px;
+        transform: rotate(25.23deg);
     }
 }
