--- a/src/shared/components/checkbox/checkbox.module.scss
+++ b/src/shared/components/checkbox/checkbox.module.scss
@@ -1,30 +1,13 @@
-.container {
-    /* Add if not using autoprefixer */
-    -webkit-appearance: none;
-    appearance: none;
-    /* For iOS < 15 to remove gradient background */
-    background-color: #fff;
-    /* Not removed via appearance */
-    margin: 0;
-    font: inherit;
-    color: currentColor;
-    width: 1.15em;
-    height: 1.15em;
-    border: 0.15em solid currentColor;
-    border-radius: 0.15em;
-    transform: translateY(-0.075em);
-
-    display: grid;
-    place-content: center;
+.form-control {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
 }
-
-.container::before {
-    content: '';
-    width: 0.65em;
-    height: 0.65em;
-    transform: scale(0);
-    transition: 120ms transform ease-in-out;
-    box-shadow: inset 1em 1em red;
-    transform-origin: bottom left;
-    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+.label {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 20px;
+}
+.checkbox {
 }
