--- a/src/shared/components/card/card.module.scss
+++ b/src/shared/components/card/card.module.scss
@@ -1,12 +1,15 @@
 .card__container {
     background-color: $primary-background-color;
     max-width: 280px;
-    min-width: 186px;
+    min-width: 185px;
     overflow: hidden;
     width: 100%;
     box-shadow: 0px 4px 28px -2px #00000014;
     border-radius: 12px;
     padding: 8px 8px 0px 8px;
+}
+.fullWidth {
+    max-width: 100%;
 }
 .card-wrapper {
     display: flex;
@@ -72,15 +75,7 @@
     line-height: 20px;
 }
 @media screen and (max-width: 767px) {
-    .card__container {
-        max-width: 185px;
-    }
     .card__image {
         max-height: 170px;
-    }
-}
-@media screen and (max-width: 413px) {
-    .card__container {
-        max-width: 280px;
     }
 }
