--- a/src/features/home-features/whatsnew/whatsnew.module.scss
+++ b/src/features/home-features/whatsnew/whatsnew.module.scss
@@ -12,28 +12,42 @@
 }
 
 .container-bottom {
+    --spacing: 20px;
+    --column: 4;
+    --total-spacing: calc(calc(var(--column) - 1) * var(--spacing));
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: var(--spacing);
+}
+.product {
+    width: calc(calc((100% - var(--total-spacing)) / var(--column))) !important;
 }
 .container-right-mobile {
     display: none;
 }
 
-@media screen and (max-width: 1279px) {
+@media screen and (max-width: 1023px) {
     .container-bottom {
-        justify-content: center;
+        --column: 3;
     }
 }
 
 @media screen and (max-width: 767px) {
     .container-bottom {
-        gap: 12px;
+        --column: 2;
+        --spacing: 12px;
+        gap: var(--spacing);
     }
     .container-right {
         display: none;
     }
     .container-right-mobile {
+        display: block;
         margin-top: 16px;
+    }
+}
+@media screen and (max-width: 413px) {
+    .container-bottom {
+        --column: 1;
     }
 }
