--- a/src/shared/components/card/card.module.scss
+++ b/src/shared/components/card/card.module.scss
@@ -7,6 +7,7 @@
     box-shadow: 0px 4px 28px -2px #00000014;
     border-radius: 12px;
     padding: 8px 8px 0px 8px;
+    min-height: 378px;
 }
 .fullWidth {
     max-width: 100%;
@@ -77,5 +78,8 @@
 @media screen and (max-width: 767px) {
     .card__image {
         max-height: 170px;
+    }
+    .card__container {
+        min-height: unset;
     }
 }
