--- a/src/shared/components/footer/footer.module.scss
+++ b/src/shared/components/footer/footer.module.scss
@@ -59,6 +59,9 @@
     &-item {
         color: $neutrol-100-color;
     }
+    &-social {
+        color: $neutrol-100-color;
+    }
 }
 .container-bottom {
     display: flex;
