--- a/src/features/detail-features/detail-product/detail-product.module.scss
+++ b/src/features/detail-features/detail-product/detail-product.module.scss
@@ -97,6 +97,8 @@
     .product {
         .health-mobile {
             display: flex;
+            flex-direction: column;
+            align-items: flex-start;
         }
     }
     .container {
