--- a/src/features/detail-features/components/slider/slider.module.scss
+++ b/src/features/detail-features/components/slider/slider.module.scss
@@ -1,92 +1,32 @@
 .slider {
-    max-width: 560px;
-    min-width: 384px;
-    min-height: 592px;
-    width: 100%;
-    overflow: hidden;
-    &-swiper-main {
-        width: 100%;
-        max-height: 476px;
+    position: relative;
+    :global(.swiper) {
+        position: static;
+    }
+    :global(.swiper-pagination-bullet) {
+        width: 10px;
+        height: 10px;
+        border-radius: 8px;
+    }
+    :global(.swiper-pagination-bullet-active) {
+        width: 24px;
+        height: 10px;
+        border-radius: 8px;
+    }
+    :global(.swiper-pagination) {
+        top: unset;
+        bottom: -24px !important;
+    }
+    &-item {
+        max-width: 248px;
+        max-height: 340px;
         height: 100%;
+        width: 100%;
         overflow: hidden;
-        margin-bottom: 12px;
-        position: relative;
         border-radius: 10px;
-
         img {
             width: 100%;
-            height: 100%;
-            object-fit: contain;
-            border-radius: 10px;
-        }
-    }
-    &-swiper-thumb {
-        height: 94px;
-        overflow: hidden;
-        img {
-            width: 100%;
-            height: 100%;
             object-fit: cover;
-            border-radius: 6px;
-        }
-        :global(.swiper-slide-thumb-active::before) {
-            opacity: 0;
-        }
-    }
-    &-thumb {
-        max-width: 94px;
-        width: 100% !important;
-        position: relative;
-        &::before {
-            display: block;
-            content: '';
-            width: 100%;
-            height: 100%;
-            background-color: black;
-            opacity: 0.2;
-            position: absolute;
-            border-radius: 6px;
-        }
-    }
-}
-.fullWidth {
-    max-width: 100%;
-    width: 100%;
-}
-
-.control-btn {
-    width: 42px;
-    height: 42px;
-    border-radius: 50%;
-    background-color: #ffffff66;
-    position: absolute;
-    z-index: 99;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    user-select: none;
-}
-.prev-btn {
-    top: 50%;
-    left: 16px;
-    transform: translateY(-50%);
-}
-.next-btn {
-    top: 50%;
-    right: 16px;
-    transform: translateY(-50%);
-}
-
-@media screen and (max-width: 1023px) {
-    .slider {
-        min-height: auto;
-        &-swiper-thumb {
-            height: 68px;
-            overflow: hidden;
-        }
-        &-thumb {
-            max-width: 68px;
         }
     }
 }
