--- a/src/features/home-features/pet-knowledge/components/card/card.module.scss
+++ b/src/features/home-features/pet-knowledge/components/card/card.module.scss
@@ -1,4 +1,4 @@
-.card-container {
+.card {
     max-width: 382px;
     padding: 8px;
     overflow: hidden;
@@ -7,54 +7,58 @@
     flex: 1;
     min-height: 424px;
     min-width: 300px;
-}
-.card-media {
-    max-height: 244px;
-    height: 100%;
-    img {
-        width: 100%;
+    &-media {
+        max-height: 244px;
         height: 100%;
-        object-fit: cover;
-        border-radius: 12px;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-radius: 12px;
+        }
+    }
+    &-content {
+        padding: 8px;
+    }
+    &-child-content {
+        display: flex;
+        flex-direction: column;
+        gap: 8px;
+        justify-content: space-between;
+    }
+    &-chip {
+        padding: 2px 10px;
+        background-color: $info-main-color;
+        color: white;
+        border-radius: 99px;
+        font-size: 10px;
+        line-height: 16px;
+        font-weight: 700;
+    }
+    &-title {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 24px;
+        color: $neutrol-100-color;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2; /* start showing ellipsis when 3rd line is reached */
+        white-space: pre-wrap; /* let the text wrap preserving spaces */
+    }
+    &-desc {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 20px;
+        color: $neutrol-80-color;
+        overflow: hidden;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 3; /* start showing ellipsis when 3rd line is reached */
+        white-space: pre-wrap; /* let the text wrap preserving spaces */
     }
 }
-.card-content {
-    padding: 8px;
-}
-.card-child-content {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    justify-content: space-between;
-}
-.card-chip {
-    padding: 2px 10px;
-    background-color: $info-main-color;
-    color: white;
-    border-radius: 99px;
-    font-size: 10px;
-    line-height: 16px;
-    font-weight: 700;
-}
-.card-title {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 24px;
-    color: $neutrol-100-color;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2; /* start showing ellipsis when 3rd line is reached */
-    white-space: pre-wrap; /* let the text wrap preserving spaces */
-}
-.card-desc {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-    color: $neutrol-80-color;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3; /* start showing ellipsis when 3rd line is reached */
-    white-space: pre-wrap; /* let the text wrap preserving spaces */
+.fullWidth {
+    max-width: 100%;
+    width: 100%;
 }
