[refactor] Rearrange root folder paths

--- a/src/features/home-features/components/pet-seller/pet-seller.module.scss
+++ b/src/features/home-features/components/pet-seller/pet-seller.module.scss
@@ -47,7 +47,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-image: url('./../../../../shared/assets/images/banner-pet-seller.png');
+    background-image: url('./../../assets/banner/banner-pet-seller-background.png');
     background-size: cover;
     background-repeat: no-repeat;
     .banner-left {
